// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render with data 1`] = `
<styled.div>
  <styled.button
    onClick={[Function]}
  >
    <MdKeyboardArrowDown
      color="white"
      size={20}
    />
  </styled.button>
  <styled.button
    onClick={[Function]}
  >
    <MdMenu
      color="white"
      size={20}
    />
  </styled.button>
  <styled.h4>
    Header Title
  </styled.h4>
  <styled.span>
    Header subtitle
  </styled.span>
</styled.div>
`;

exports[`Header component should render with minimal props 1`] = `
<styled.div>
  <styled.button
    onClick={null}
  >
    <MdKeyboardArrowDown
      color="white"
      size={20}
    />
  </styled.button>
  <styled.button
    onClick={null}
  >
    <MdMenu
      color="white"
      size={20}
    />
  </styled.button>
  <styled.h4 />
  <styled.span />
</styled.div>
`;
